--- a/fw_downloader/src/main/res/layout/activity_main.xml
+++ b/fw_downloader/src/main/res/layout/activity_main.xml
@@ -10,23 +10,30 @@
         android:layout_height="wrap_content"
         android:text="@string/app_version" />
 
-    <Button
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:text="Get FW Version"
-        android:onClick="buttonGetVersionOnClick"/>
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <Button
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:text="Check connected device"
-        android:onClick="buttonCheckDeviceOnClick"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="60dp"
+            android:text="Check connected device"
+            android:onClick="buttonCheckDeviceOnClick"/>
 
-    <Button
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:text="Download"
-        android:onClick="buttonDownloadOnClick"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="60dp"
+            android:text="Get FW Version"
+            android:onClick="buttonGetVersionOnClick"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="60dp"
+            android:text="Download"
+            android:onClick="buttonDownloadOnClick"/>
+    </LinearLayout>
+
     
     <ImageView
         android:layout_width="match_parent"
